--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,32 @@ obj/
 *.vsidx
 *.vsidx
 .vs/TechTyccoon2/v17/.suo
+.vs/ProjectEvaluation/techtyccoon2.metadata.v5.2
+.vs/ProjectEvaluation/techtyccoon2.projects.v5.2
+.vs/TechTyccoon2/DesignTimeBuild/.dtbcache.v2
+.vs/TechTyccoon2/FileContentIndex/read.lock
+.vs/TechTyccoon2/v17/.futdcache.v2
+.vs/TechTyccoon2/v17/.suo
+bin/Debug/net7.0/TechTyccoon2.deps.json
+bin/Debug/net7.0/TechTyccoon2.exe
+bin/Debug/net7.0/TechTyccoon2.runtimeconfig.json
+obj/Debug/net7.0/.NETCoreApp,Version=v7.0.AssemblyAttributes.cs
+obj/Debug/net7.0/apphost.exe
+obj/Debug/net7.0/refint/TechTyccoon2.dll
+obj/Debug/net7.0/TechTyccoon2.AssemblyInfo.cs
+obj/Debug/net7.0/TechTyccoon2.AssemblyInfoInputs.cache
+obj/Debug/net7.0/TechTyccoon2.assets.cache
+obj/Debug/net7.0/TechTyccoon2.csproj.AssemblyReference.cache
+obj/Debug/net7.0/TechTyccoon2.csproj.BuildWithSkipAnalyzers
+obj/Debug/net7.0/TechTyccoon2.csproj.CoreCompileInputs.cache
+obj/Debug/net7.0/TechTyccoon2.csproj.FileListAbsolute.txt
+obj/Debug/net7.0/TechTyccoon2.dll
+obj/Debug/net7.0/TechTyccoon2.GeneratedMSBuildEditorConfig.editorconfig
+obj/Debug/net7.0/TechTyccoon2.genruntimeconfig.cache
+obj/Debug/net7.0/TechTyccoon2.GlobalUsings.g.cs
+obj/Debug/net7.0/TechTyccoon2.pdb
+obj/project.assets.json
+obj/project.nuget.cache
+obj/TechTyccoon2.csproj.nuget.dgspec.json
+obj/TechTyccoon2.csproj.nuget.g.props
+obj/TechTyccoon2.csproj.nuget.g.targets
