--- a/TechTyccoon2.csproj
+++ b/TechTyccoon2.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="RandomNameGeneratorLibrary" Version="1.2.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Products\" />
+  </ItemGroup>
+
 </Project>
